# cargo-spellcheck

./: .concourse.yml  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE-LGPL  LICENSE-MIT  README.md  REMEDY.md  build.rs  cliff.toml  test.rs
.config/: lingo.dic  spellcheck.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE  auto_pr_team.yml  no-response.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ---report-a-bug.md  ---request-a-new-feature.md  --ask-a-question.md  bug-report.md  project-backlog.md
.github/actions/install-clang/: action.yml
.github/workflows/: ci.yml  release.yml
demo/: Cargo.toml  README.md
demo/.config/: spellcheck.toml  topic.dic
demo/member/: stray.rs
demo/member/procmacro/: Cargo.toml
demo/member/procmacro/src/: lib.rs
demo/member/true/: Cargo.toml  README.md  lib.rs
demo/src/: lib.rs  main.rs
demo/src/nested/: fragments.rs  just_very_long.rs  justtwo.rs  mod.rs
demo/src/nested/again/: code.rs  mod.rs
demo/src/nested/fragments/: enumerate.rs  simple.rs
doc-chunks/: Cargo.toml  README.md
doc-chunks/src/: cfg_eval.rs  chunk.rs  cluster.rs  developer.rs  errors.rs  lib.rs  literal.rs  literalset.rs  markdown.rs  span.rs  testcase.rs  util.rs
docchunks/: Cargo.toml
docchunks/src/: chunk.rs  lib.rs  literalset.rs  markdown.rs
docs/: automation.md  checkers.md  configuration.md  features.md
hunspell-data/: en_US.aff
nlprule-data/0.4.5/en/: en_rules.bin.xz
nlprule-data/0.4.6/en/: en_rules.bin.xz
nlprule-data/0.5.3/en/: en_rules.bin.xz
nlprule-data/0.6.0/en/: en_rules.bin.xz
nlprule-data/0.6.1/en/: en_rules.bin.xz
nlprule-data/0.6.2/en/: en_rules.bin.xz
nlprule-data/0.6.3/en/: en_rules.bin.xz
nlprule-data/0.6.4/en/: en_rules.bin.xz
src/: action.rs  checker.rs  config.rs  documentation.rs  errors.rs  extractor.rs  lib.rs  literalset.rs  main.rs  markdown.rs  span.rs  suggestion.rs  tests.rs  tinhat.rs  traverse.rs  util.rs
src/action/: bandaid.rs  bandaidset.rs  interactive.rs  mod.rs
src/checker/: cached.rs  dictaffix.rs  dummy.rs  hunspell.rs  languagetool.rs  mod.rs  nlprules.rs  quirks.rs  spellbook.rs  tokenize.rs  zet.rs  zspell.rs
src/config/: args.rs  hunspell.rs  iso.rs  linkcheck.rs  mod.rs  nlprules.rs  regex.rs  search_dirs.rs
src/documentation/: chunk.rs  cluster.rs  developer.rs  literal.rs  literalset.rs  markdown.rs  mod.rs  tests.rs
src/linkcheck/: config.rs  mod.rs
src/reflow/: config.rs  iter.rs  mod.rs  tests.rs
src/tests/: enumerate.rs  fragments.rs  justone.rs  simple.rs
src/tests/nested/: mod.rs
src/tests/nested/again/: mod.rs
src/traverse/: iter.rs  mod.rs
src/wrap/: mod.rs
test/: signal_handler.rs
tests/: signal_handler.rs
