[package]
name = "cargo-spellcheck"
version = "0.7.2-alpha.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"
repository = "https://github.com/drahnr/cargo-spellcheck.git"
homepage = "https://github.com/drahnr/cargo-spellcheck"
license = "MIT OR Apache-2.0"
keywords = ["spellcheck", "spelling", "grammar"]
description = "Checks all doc comments for spelling mistakes"
readme = "README.md"
build = "build.rs"
include = [
    "nlprule-data/**/*.bin.xz",
    "src/**/*.rs",
    "Cargo.toml",
    "build.rs",
    "/LICENSE-*",
    "/README.md"
]

[build-dependencies]
nlprule-build = { version = "0.4.6", optional = true }
# compress the nlprule artifacts to be under the 10 MB limit
# that cargo enforces
xz2 = "0.1"

[dependencies]
anyhow = "1"
cargo_toml = "0.8"
console = "0.14"
crossterm = "0.19"
# for the config file
directories = "3"
docopt = "1"
enumflags2 = "0.6"
env_logger = "0.8"
fancy-regex = "0.5"
fs-err = "2"
indexmap = { version = "1", features=["rayon", "serde"] }
itertools = "0.10"
lazy_static = "1"
log = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
pulldown-cmark = "0.8"
ra_ap_syntax = "0.0.38"
rayon = "1.5"
regex = "1.4"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
syn = { version = "1", features = ["full"] }
# for parsing and extracting elements from Cargo.toml
toml = "0.5"
# for the config file
walkdir = "2"

# config parsing, must be independent of features

# TODO parse the country codes of dictionaries?
# iso_country = { version = "0.1" }
# isolang = { version = "1", features = ["serde_serialize"] }

url = { version = "2", features = ["serde"] }

# dictionary lookup with affixes
hunspell-rs = { version = "0.3", default-features=false, optional = true }

# full grammar check
languagetool-rs = { version = "0.1", package = "languagetool", optional = true }

nlprule = { version = "0.4.6", optional = true }

[dev-dependencies]
# for stripping ansi color codes
console = "0.14"
assert_matches = "1"
maplit = "1"

[features]
default = ["hunspell", "nlprules"]

# deprecated! pending removal
languagetool = ["languagetool-rs"]
hunspell = ["hunspell-rs/bundled"]
nlprules = ["nlprule", "nlprule-build"]

all = ["hunspell", "nlprules", "languagetool"]

[profile.dev]
build-override = { opt-level = 2 }
