[package]
name = "cargo-spellcheck"
version = "0.9.7-alpha.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"
repository = "https://github.com/drahnr/cargo-spellcheck.git"
homepage = "https://github.com/drahnr/cargo-spellcheck"
license = "MIT OR Apache-2.0"
keywords = ["spellcheck", "spelling", "grammar"]
description = "Checks all doc comments for spelling mistakes"
readme = "README.md"
build = "build.rs"
include = [
    "nlprule-data/**/*.bin.xz",
    "hunspell-data/*",
    "src/**/*.rs",
    "Cargo.toml",
    "build.rs",
    "/LICENSE-*",
    "/README.md",
    "tests/**/*.rs"
]

[build-dependencies]
nlprule-build = { version = "=0.6.4",  optional = true }
# compress the nlprule artifacts to be under the 10 MB limit
# that cargo enforces
xz2 = "0.1"

[dependencies]
color-eyre = "0.5"
cargo_toml = "^0.10.1"
console = "0.15"
crossterm = "0.22.1"
# for the config file
directories = "4.0.1"
docopt = "1"
env_logger = "0.9"
fancy-regex = "^0.7.1"
fs-err = "2"
indexmap = { version = "1", features=["rayon", "serde"] }
itertools = "0.10"
lazy_static = "1"
memchr = "2"
log = "0.4"
num_cpus = "1.13"
proc-macro2 = { version = "1", features = ["span-locations"] }
pulldown-cmark = "0.9.0"
ra_ap_syntax = "0.0.84"
rayon = "1.5"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
syn = { version = "1", features = ["full"] }
thiserror = "1"
# for parsing and extracting elements from Cargo.toml
toml = "0.5"
glob = "0.3"
# for the config file
walkdir = "2"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures = "0.3"

uuid = { version = "0.8.2", features = ["v4"] }

# config parsing, must be independent of features

# TODO parse the country codes of dictionaries?
iso_country = { version = "0.1", features = ["serde"] }
isolang = { version = "2", features = ["serde"] }

url = { version = "2", features = ["serde"] }

# dictionary lookup with affixes
hunspell-rs = { version = "0.3", optional = true }
fd-lock = { version = "3", optional = true }

# full grammar check, but also tokenization and disambiguation
nlprule = { version = "=0.6.4", optional = true }

[dev-dependencies]
# for stripping ansi color codes
console = "0.15"
assert_matches = "1"
maplit = "1"
serde_plain = "1"
# signal-child = "1"
syscalls = "0.5"
fork = "0.1"

[features]
default = ["hunspell", "nlprules"]

# hunspell uses the segmenter provided by nlprules
hunspell = ["hunspell-rs/bundled", "fd-lock", "nlprules"]
nlprules = ["nlprule/regex-fancy", "nlprule-build"]

all = ["hunspell", "nlprules"]

[profile.dev]
build-override = { opt-level = 2 }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
debug = true

[package.metadata.spellcheck]
config = ".config/spellcheck.toml"
